src/styles/App.css
@font-face {
  font-family: 'Hiromisake';
  src: url('../fonts/HIROMISAKE.ttf') format('truetype');
}

body {
  font-family: 'Hiromisake', Georgia, Times, 'Times New Roman', serif;
}

.App {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  width: 100vw;
  height: 100vh;
}

nav {
  width: 100%;
  padding: 10px;
  margin-top: -50px;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  color:rgb(137, 127, 11);
}



.card-grid {
  display: grid;
  width: 1000px;
  height: 500px;
  grid-template-columns: repeat(5, 20%);
  grid-template-rows: repeat(3, 33%);
  gap: 16px;
}

.best-score {
  display: flex;
  position: absolute;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.4);
  background-position: center;
  background-repeat: no-repeat;
  background-size: contain;
}

.card {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}


h5 {
  color: rgb(44, 29, 3);
  margin: 6px;
}

h3 {
  color: rgb(44, 29, 3);
  font-size: 20px;
}

button {
  appearance: none;
  border: 2px solid rgb(17, 15, 15);
  padding: 12px;
  background: none;
  font-family: 'Hiromisake', Georgia, Times, 'Times New Roman', serif;
  cursor: pointer;
}


ul {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  list-style: none;
  color: rgb(44, 29, 3);
}


li {
  margin-left: 20px;
  font-size: 20px;
}

